--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,6 +1,25 @@
 ---
 layout: default
 ---
-<h1 class="headline">{{page.title}}</h1>
-<div class="meta"><span>{{page.date | date: '%B %d, %Y'}}</span></div>
-{{content}}
+
+<div class="post">
+  <h1 class="post-title">{{ page.title }}</h1>
+  <span class="post-date">{{ page.date | date_to_string }}</span>
+  {{ content }}
+</div>
+
+<div class="related">
+  <h2>Related Posts</h2>
+  <ul class="related-posts">
+    {% for post in site.related_posts limit:3 %}
+      <li>
+        <h3>
+          <a href="{{ post.url }}">
+            {{ post.title }}
+            <small>{{ post.date | date_to_string }}</small>
+          </a>
+        </h3>
+      </li>
+    {% endfor %}
+  </ul>
+</div>
